--- a/css/index.css
+++ b/css/index.css
@@ -7,11 +7,14 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:300&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Monoton&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Poppins:500&display=swap');
+
 *{
     padding: 0%;
     margin: 0%;
     box-sizing: border-box;
+    font-family: poppins, Verdana, Geneva, Tahoma, sans-serif
 }
+
 ::-webkit-scrollbar{
     width: 4px;
     color:#c70039;
@@ -2283,15 +2286,9 @@ for tabs and large phones
         width: 40%;
     }
     .about-img img{
-        width: 100%;
-        height:450px;
-        padding: 30px;
-        border-radius: 40px;
         animation: opacity 1.4s ease ;
     }
     .about-img {
-        width: 40%;
-        height:450px;
         padding: 30px;
         border-radius: 40px;
     }
@@ -2306,17 +2303,16 @@ for tabs and large phones
      }
     .about-second-line{
         opacity: .8;
-        font-size: 28px;
-        font-weight: 200;
+        font-size: 26px;
+        font-weight: 150;
     }
     .cv a button{
-        background: transparent;
         border:none;
         padding: 25px 35px;
         color: whitesmoke;
         outline: none;
-        font-size:30px;
-        font-family: aileron;
+        font-size:26px;
+        font-family: Arial, Helvetica, sans-serif;
         border-radius: 4px;
         font-weight: 400;
         cursor: pointer;
